Updated Wave changes

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -23,7 +23,7 @@
           </a>
         </div>        
         <div class="uq-header__nav-primary"  data-gtm-category="Header navigation">
-          <nav class="uq-header__nav-primary-container">
+          <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
             <ul class="uq-header__nav-primary-list">
               <li><a class="uq-header__nav-primary-link" href="https://future-students.uq.edu.au/">Study</a></li>
               <li><a class="uq-header__nav-primary-link" href="https://research.uq.edu.au/">Research</a></li>
@@ -38,7 +38,7 @@
           </button>
         </div>
       </div>
-      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav" data-gtm-category="Header navigation mobile">
+      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav" data-gtm-category="Header navigation mobile" aria-label="primary navigation mobile">
         <div class="uq-site-header__title-container">
           <div class="uq-site-header__title-container__left">
             <a href="/" class="uq-site-header__title">Site title</a>
@@ -153,28 +153,28 @@
           <li class="uq-header__newglobal-nav-item">
             <a class="uq-header__newglobal-nav-link" href="#">About</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">UQ home</a>
+          <li class="uq-header__nav-secondary-item">
+            <a href="https://www.uq.edu.au/" class="uq-header__nav-secondary-link">UQ home</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">News</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">News</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Events</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://www.uq.edu.au/events/" class="uq-header__nav-secondary-link">Events</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Give</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://alumni.uq.edu.au/giving/" class="uq-header__nav-secondary-link">Give</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Contact</a>
-          </li>  
+          <li class="uq-header__nav-secondary-item">
+            <a href="https://contacts.uq.edu.au/contacts" class="uq-header__nav-secondary-link">Contact</a>
+          </li> 
       </nav>
       <div class="uq-header__search" data-gtm-category="Header search">
         <div class="uq-header__search-container">
           <form>
             <fieldset>
               <div class="uq-header__search-query">
-                <label for="edit-q" class="visually-hidden">Search term</label>
+                <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
                 <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="uq-header__search-query-input">
                 <span class="uq-header__search-query-button">
                   <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
@@ -196,7 +196,7 @@
         <nav class="uq-header__nav-secondary-container">
           <ul class="uq-header__nav-secondary-list">
               <li class="uq-header__nav-secondary-item">
-                 <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
+                 <a href="https://www.uq.edu.au/" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
               </li>
               <li class="uq-header__nav-secondary-item">
                   <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link">News</a>
@@ -208,7 +208,7 @@
                   <a href="https://alumni.uq.edu.au/giving/" rel="external" class="uq-header__nav-secondary-link">Give</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link">Contact</a>
+                <a href="https://contacts.uq.edu.au/contacts" rel="external" class="uq-header__nav-secondary-link">Contact</a>
               </li>
           </ul>
         </nav>
@@ -334,7 +334,7 @@
           </ul>
         </nav>
       </div>
-    </div>    
+    </div>   
 
     <!-- Page header (default) -->
 
@@ -370,7 +370,7 @@
     <footer class="uq-footer" data-gtm-category="Footer">
       <div  class="uq-footer__reconciliation">
         <div class="uq-footer__acknowledgement">
-          <img class="uq-footer__acknowledgement-flag" src="https://static.uq.net.au/v14/images/rap/aboriginal.svg"/> <img class="uq-footer__acknowledgement-flag" src="https://static.uq.net.au/v14/images/rap/torres-strait-islanders.svg"/> <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation at UQ</a></span>
+          <img class="uq-footer__acknowledgement-flag" alt="Australian Aboriginal Flag" src="https://static.uq.net.au/v14/images/rap/aboriginal.svg"/> <img class="uq-footer__acknowledgement-flag" alt="Torres Strait Islander Flag" src="https://static.uq.net.au/v14/images/rap/torres-strait-islanders.svg"/> <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation at UQ</a></span>
         </div>
       </div>
       <div class="uq-footer__container">
@@ -462,7 +462,7 @@
         </nav>
 
         <!-- Mobile Footer Navigation-->
-        <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation mobile">
+        <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation" aria-label="footer navigation mobile">
           <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
               <button class="uq-accordion__toggle uq-footer__navigation-toggle">Media</button>
@@ -550,26 +550,26 @@
         </nav>
         <!-- Footer contact details -->
         <div class="uq-footer__contact">   
-          <nav class="uq-footer__contact-item">
+          <nav class="uq-footer__contact-item" aria-label="Social Media">
             <ul class="uq-footer__footer-list uq-footer__contact-social"> 
-              <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons"></a></li> 
-              <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons"></a></li> 
-              <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons"></a></li>
-              <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons"></a></li>
-              <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld/" class="uq-footer__meta-icons--instagram uq-footer__meta-icons"></a></li>
+              <li class="uq-footer__footer-item"><a aria-label="Facebook" href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons"></a></li> 
+              <li class="uq-footer__footer-item"><a aria-label="linkedin" href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons"></a></li> 
+              <li class="uq-footer__footer-item"><a aria-label="Twitter" href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons"></a></li>
+              <li class="uq-footer__footer-item"><a aria-label="Youtube" href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons"></a></li>
+              <li class="uq-footer__footer-item"><a aria-label="Instagram" href="https://instagram.com/uniofqld/" class="uq-footer__meta-icons--instagram uq-footer__meta-icons"></a></li>
             </ul>
           </nav> 
           <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
        
         </div>
-        <nav class="uq-footer__meta">
+        <nav class="uq-footer__meta" aria-label="Business meta">
           <ul  class="uq-footer__footer-list">
             <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
             <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
             <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external">00025B</a></li>
           </ul>
         </nav>
-        <nav class="uq-footer__footer">
+        <nav class="uq-footer__footer" aria-label="Term and conditions">
           <ul class="uq-footer__footer-list">
               <li class="uq-footer__footer-item">
                   <a href="https://www.uq.edu.au/terms-of-use/" class="uq-footer__link">Privacy &amp; Terms of use</a>
