Fixed data-action for data-gtm-action

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -15,7 +15,7 @@
     <header class="uq-header" data-gtm-category="Header">
       <div class="uq-header__container">
         <div class="uq-header__menu-toggle" data-gtm-category="Primary header">
-          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="Toggle">Menu</button>
+          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle" data-gtm-action="Toggle">Menu</button>
         </div>
         <div class="uq-header__logo" data-gtm-category="Primary header">
           <a class="logo--large" href="https://www.uq.edu.au/" data-gtm-label="UQ Logo">
