--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -15,7 +15,7 @@
     <header class="uq-header" data-gtm-category="Header">
       <div class="uq-header__container">
         <div class="uq-header__menu-toggle" data-target="global-mobile-nav" data-gtm-category="Primary header">
-          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="Toggle">Menu</button>
+          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle" data-gtm-action="Toggle">Menu</button>
         </div>
         <div class="uq-header__logo" data-gtm-category="Primary header">
           <a class="logo--large" href="https://www.uq.edu.au/" data-gtm-label="UQ Logo">
@@ -33,7 +33,7 @@
           </nav>
         </div>
         <div class="uq-header__search-toggle" data-gtm-category="Search">
-          <button class="nav-primary__toggle nav-primary__search-toggle" data-action="Toggle">
+          <button class="nav-primary__toggle nav-primary__search-toggle" data-gtm-action="toggle">
             <div class="search-toggle__label">Search</div>
           </button>
         </div>
@@ -224,7 +224,7 @@
         </div>
         <div class="uq-site-header__title-container__right">
           <!-- <div>[Site utilities go here]</div> -->
-          <button class="uq-site-header__navigation-toggle jsNavToggle" data-action="Toggle">Menu</button>
+          <button class="uq-site-header__navigation-toggle jsNavToggle" data-gtm-action="toggle">Menu</button>
         </div>
       </div>
     
@@ -234,7 +234,7 @@
           <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-1">
             <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav uq-site-header__navigation__list-item--active">
               <a href="/study" aria-haspopup="true" aria-expanded="false" class="uq-site-header__navigation__list-link">Study</a>
-              <button class="uq-site-header__navigation__sub-toggle" data-action="Toggle"><span class="visually-hidden">Show Study sub-navigation</span></button>
+              <button class="uq-site-header__navigation__sub-toggle" data-gtm-action="toggle"><span class="visually-hidden">Show Study sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="Study sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
                   <a href="/study/programs">Find a program</a>
@@ -276,7 +276,7 @@
             </li>
             <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav">
               <a href="/admissions" aria-haspopup="true" aria-expanded="false" class="uq-site-header__navigation__list-link">Admissions</a>
-              <button class="uq-site-header__navigation__sub-toggle" data-action="Toggle"><span class="visually-hidden">Show Admissions sub-navigation</span></button>
+              <button class="uq-site-header__navigation__sub-toggle" data-gtm-action="toggle"><span class="visually-hidden">Show Admissions sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="Admissions sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
                   <a href="/admissions/undergraduate">Undergraduate</a>
@@ -306,7 +306,7 @@
             </li>
             <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav">
               <a href="/university-life" aria-haspopup="true" aria-expanded="false" class="uq-site-header__navigation__list-link">University life</a>
-              <button class="uq-site-header__navigation__sub-toggle" data-action="Toggle"><span class="visually-hidden">Show University life sub-navigation</span></button>
+              <button class="uq-site-header__navigation__sub-toggle" data-gtm-action="toggle"><span class="visually-hidden">Show University life sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="University life sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
                   <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
@@ -465,7 +465,7 @@
         <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation mobile">
           <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Media</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="toggle" data-gtm-action="Toggle">Media</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
@@ -479,7 +479,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Staff</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="toggle" data-gtm-action="Toggle">Staff</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
@@ -499,7 +499,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Current students</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="toggle" data-gtm-action="Toggle">Current students</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
@@ -519,7 +519,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Library</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="toggle" data-gtm-action="Toggle">Library</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
@@ -527,7 +527,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Contact</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="toggle" data-gtm-action="Toggle">Contact</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
