Update Menu links and items

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -25,9 +25,9 @@
         <div class="uq-header__nav-primary"  data-gtm-category="Header navigation">
           <nav class="uq-header__nav-primary-container">
             <ul class="uq-header__nav-primary-list">
-              <li><a class="uq-header__nav-primary-link" href="https://future-students.uq.edu.au/">Study</a></li>
+              <li><a class="uq-header__nav-primary-link" href="https://study.uq.edu.au/">Study</a></li>
               <li><a class="uq-header__nav-primary-link" href="https://research.uq.edu.au/">Research</a></li>
-              <li><a class="uq-header__nav-primary-link" href="https://global-engagement.uq.edu.au/partnerships">Partners and Community</a></li>
+              <li><a class="uq-header__nav-primary-link" href="https://partners-community.uq.edu.au">Partners and Community</a></li>
               <li><a class="uq-header__nav-primary-link" href="https://about.uq.edu.au/">About</a></li>
             </ul>
           </nav>
@@ -142,31 +142,31 @@
             <a href="/contact-us">Contact</a>
           </li>
           <li  class="uq-header__newglobal-nav-item">
-            <a  class="uq-header__newglobal-nav-link" href="#">Study</a>
+            <a  class="uq-header__newglobal-nav-link" href="https://study.uq.edu.au/">Study</a>
           </li>
           <li  class="uq-header__newglobal-nav-item">
-            <a  class="uq-header__newglobal-nav-link" href="#">Research</a>
+            <a  class="uq-header__newglobal-nav-link" href="https://research.uq.edu.au/">Research</a>
           </li>
           <li  class="uq-header__newglobal-nav-item">
-            <a  class="uq-header__newglobal-nav-link" href="#">Partners and community</a>
+            <a  class="uq-header__newglobal-nav-link" href="https://partners-community.uq.edu.au">Partners and community</a>
           </li>
           <li class="uq-header__newglobal-nav-item">
-            <a class="uq-header__newglobal-nav-link" href="#">About</a>
+            <a class="uq-header__newglobal-nav-link" href="https://about.uq.edu.au/">About</a>
           </li>
           <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">UQ home</a>
+            <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/">UQ home</a>
           </li>
           <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">News</a>
+            <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/news/">News</a>
           </li>
           <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Events</a>
+            <a class="uq-header__nav-secondary-link" href="https://www.uq.ed.au/uq-events">Events</a>
           </li>
           <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Give</a>
+            <a class="uq-header__nav-secondary-link" href="https://alumni.uq.edu.au/giving">Give</a>
           </li>
           <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Contact</a>
+            <a class="uq-header__nav-secondary-link" href="https://contacts.uq.edu.au/">Contact</a>
           </li>  
       </nav>
       <div class="uq-header__search" data-gtm-category="Header search">
@@ -196,19 +196,19 @@
         <nav class="uq-header__nav-secondary-container">
           <ul class="uq-header__nav-secondary-list">
               <li class="uq-header__nav-secondary-item">
-                 <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
+                 <a href="https://www.uq.edu.au/" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
               </li>
               <li class="uq-header__nav-secondary-item">
                   <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link">News</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                  <a href="https://www.uq.edu.au/events/" rel="external" class="uq-header__nav-secondary-link">Events</a>
+                  <a href="https://www.uq.ed.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                  <a href="https://alumni.uq.edu.au/giving/" rel="external" class="uq-header__nav-secondary-link">Give</a>
+                  <a href="https://alumni.uq.edu.au/giving" rel="external" class="uq-header__nav-secondary-link">Give</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link">Contact</a>
+                <a href="https://contacts.uq.edu.au/" rel="external" class="uq-header__nav-secondary-link">Contact</a>
               </li>
           </ul>
         </nav>
