added search function

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -393,7 +393,7 @@
       </nav>
       <div class="uq-header__search" data-gtm-category="Search">
         <div class="uq-header__search-container">
-          <form>
+          <form action="https://www.uq.edu.au/search/" method="get">
             <fieldset>
               <div class="uq-header__search-query">
                 <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
