js-ify the megaamenu

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -25,7 +25,7 @@
         <div class="uq-header__nav-primary" data-gtm-category="Primary header">
           <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
             <ul class="uq-header__nav-primary-list">
-              <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/">Study</a>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/">Study</a>
                 <div class="uq-header__megamenu">
                   <div class="uq-header__megamenu-container">
                     <a href="#" class="megamenu__overview-link">Study overview</a>
@@ -81,7 +81,7 @@
                   </div>
               </div>
               </li>
-              <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/">Research</a>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/">Research</a>
                 <div class="uq-header__megamenu">
                   <div class="uq-header__megamenu-container">
                     <a href="#" class="megamenu__overview-link">Research overview</a>
@@ -122,7 +122,7 @@
                   </div>
                 </div>
               </li>
-              <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships">Partners and Community</a>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships">Partners and Community</a>
                 <div class="uq-header__megamenu">
                   <div class="uq-header__megamenu-container">
                     <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
@@ -167,7 +167,7 @@
                   </div>
                 </div>
               </li>
-              <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/">About</a>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/">About</a>
                 <div class="uq-header__megamenu">
                   <div class="uq-header__megamenu-container">
                     <a href="#" class="megamenu__overview-link">About overview</a>
