--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -25,10 +25,10 @@
         <div class="uq-header__nav-primary"  data-gtm-category="Primary header">
           <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
             <ul class="uq-header__nav-primary-list">
-              <li><a class="uq-header__nav-primary-link" href="https://future-students.uq.edu.au/">Study</a></li>
-              <li><a class="uq-header__nav-primary-link" href="https://research.uq.edu.au/">Research</a></li>
-              <li><a class="uq-header__nav-primary-link" href="https://global-engagement.uq.edu.au/partnerships">Partners and Community</a></li>
-              <li><a class="uq-header__nav-primary-link" href="https://about.uq.edu.au/">About</a></li>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://future-students.uq.edu.au/">Study</a></li>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://research.uq.edu.au/">Research</a></li>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://global-engagement.uq.edu.au/partnerships">Partners and Community</a></li>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://about.uq.edu.au/">About</a></li>
             </ul>
           </nav>
         </div>
