--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -591,7 +591,7 @@
     <script type="text/javascript" src="js/uqds.min.js"></script>
     <script type="text/javascript">
       // Initialise header
-      new uq.header();
+      new uq.header(document);
       // Initialise Main Navigation
       var navelement = document.getElementById("jsNav");
       new uq.siteHeaderNavigation(navelement, "uq-site-header__navigation");
