Updated events typo.

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -160,7 +160,7 @@
             <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/news/">News</a>
           </li>
           <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-            <a class="uq-header__nav-secondary-link" href="https://www.uq.ed.au/uq-events">Events</a>
+            <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/uq-events">Events</a>
           </li>
           <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
             <a class="uq-header__nav-secondary-link" href="https://alumni.uq.edu.au/giving">Give</a>
@@ -202,7 +202,7 @@
                   <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link">News</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                  <a href="https://www.uq.ed.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
+                  <a href="https://www.uq.edu.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
               </li>
               <li class="uq-header__nav-secondary-item">
                   <a href="https://alumni.uq.edu.au/giving" rel="external" class="uq-header__nav-secondary-link">Give</a>
