updated var to const and tweaked naming

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -695,11 +695,11 @@
     <script type="text/javascript" src="js/uqds.min.js"></script>
     <script type="text/javascript">
       // Initialise header
-      var uqheader = document.querySelector('.uq-header');
-      new uq.header(uqheader);
+      const headerElem = document.querySelector('.uq-header');
+      new uq.header(headerElem);
       // Initialise Main Navigation
-      //var navelement = document.getElementById("jsNav");
-      //new uq.siteHeaderNavigation(navelement, "uq-site-header__navigation");
+      // const navElem = document.getElementById("jsNav");
+      // new uq.siteHeaderNavigation(navElem, "uq-site-header__navigation");
       // Initialise accordions
       new uq.accordion();
 
