Fixed spelling of support

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -403,10 +403,10 @@
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff Supoort</a>
+                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT Supoort for staff</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
                 </li>
               </ul>
             </li>
@@ -426,7 +426,7 @@
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT Supoort for students</a>
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
                 </li>
               </ul>
             </li>
@@ -491,10 +491,10 @@
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff Supoort</a>
+                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT Supoort for staff</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
                 </li>
               </ul>
             </li>
@@ -514,7 +514,7 @@
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT Supoort for students</a>
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
                 </li>
               </ul>
             </li>
