--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -503,10 +503,10 @@
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff supoort</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT supoort for staff</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
                 </li>
               </ul>
             </li>
@@ -526,7 +526,7 @@
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT supoort for students</a>
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
                 </li>
               </ul>
             </li>
@@ -600,10 +600,10 @@
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff supoort</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT supoort for staff</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
                 </li>
               </ul>
             </li>
@@ -623,7 +623,7 @@
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT supoort for students</a>
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
                 </li>
               </ul>
             </li>
