Fix incorrect nav to div

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -165,7 +165,7 @@
                     <a href="#" class="megamenu__overview-link">Study overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Find a course or program</a></li>
                             <li><a href="#">Browse study areas</a></li>
@@ -183,7 +183,7 @@
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">International students</a></li>
                             <li><a href="#">Internation agents</a></li>
@@ -209,7 +209,7 @@
                     <a href="#" class="megamenu__overview-link">Research overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Research excellence and impact</a></li>
                             <li><a href="#">Faculties, schools, intitutues & centres</a></li>
@@ -223,7 +223,7 @@
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Future research students</a></li>
                             <li><a href="#">New research students</a></li>
@@ -245,7 +245,7 @@
                     <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Research & corporate partnerships</a></li>
                             <li><a href="#">UQ Alumni community</a></li>
@@ -257,7 +257,7 @@
                         </nav>
                       </div>
                       <div class="megamenu__column">
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Sponsorship</a></li>
                             <li><a href="#">Commnity engagement & volunteering</a></li>
@@ -267,7 +267,7 @@
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Alumni</a></li>
                             <li><a href="#">Donors</a></li>
@@ -287,7 +287,7 @@
                     <a href="#" class="megamenu__overview-link">About overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Introducing UQ</a></li>
                             <li><a href="#">Vision, values and strategy</a></li>
@@ -300,7 +300,7 @@
                         </nav>
                       </div>
                       <div class="megamenu__column">
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Policies and Procedures</a></li>
                             <li><a href="#">Key initiatives</a></li>
@@ -367,7 +367,7 @@
           <div class="megamenu__row">
             <div class="megamenu__column">
               <div class="megamenu__heading">Research options</div>
-              <nav class="megamenu__menu">
+              <div class="megamenu__menu">
                 <ul>
                   <li><a href="#">Find a course or program</a></li>
                   <li><a href="#">Browse study areas</a></li>
@@ -382,7 +382,7 @@
             </div>
             <div class="megamenu__column">
               <div class="megamenu__heading">Information for</div>
-              <nav class="megamenu__menu">
+              <div class="megamenu__menu">
                 <ul>
                   <li><a href="#">International</a></li>
                   <li><a href="#">Internation agents</a></li>
@@ -395,7 +395,7 @@
             </div>
             <div class="megamenu__column">
               <div class="megamenu__heading">Information for</div>
-              <nav class="megamenu__menu">
+              <div class="megamenu__menu">
                 <ul>
                   <li><a href="#">International students</a></li>
                   <li><a href="#">Internation agents</a></li>
